--- a/less/items.less
+++ b/less/items.less
@@ -105,6 +105,10 @@
       }
     }
 
+    .form-group.label-gap {
+      margin-top: 1.25em;
+    }
+
     .form-group.input-select {
       select, .type-select {
         flex: 1.8;
@@ -125,7 +129,6 @@
     }
 
     .form-group.uses-per {
-      margin-top: 1.25em;
       .form-fields {
         flex-wrap: nowrap;
       }
